@@ -1,3 +1,8 @@
+2009-1-29 Yu-Sung Su     <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 1.2-2.
+    * R/sim: for mer method, add option ranef. Users choose to return 
+      sim.ranef or not.
+
 2009-1-28 Yu-Sung Su     <ys463@columbia.edu>  
     * man: first attempt to clean up help files to comply the new rule.
             in particular, use \dQuote and \sQuote for "" and ''.
